fix z-indexing and lion selection

--- a/src/styles/DownloadButton.css
+++ b/src/styles/DownloadButton.css
@@ -187,9 +187,9 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(0, 0, 0, 0.9);
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
+  z-index: 9999;
 }
